--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB = mongodb+srv://SwipeUp:Fe@rdogmusic100#95@cluster0.mzn4zxj.mongodb.net/swipeup?retryWrites=true&w=majority
+DB = "mongodb+srv://SwipeUp:Fe%40rdogmusic100%2395@cluster0.mzn4zxj.mongodb.net/swipeup?retryWrites=true&w=majority"
+UserSecretkey = "fsjdfienfasoiewthweiafjlafx"
+API_KEY = "f0e17ead-4a52-11ed-9c12-0200cd936042"
