--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "2factor": "^1.0.6",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoos": "^0.0.1-security",
+    "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
