--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "sharp-multer": "^0.2.5",
     "soft-delete-plugin-mongoose": "^1.0.15"
   }
 }
