--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ PUBLICPROFILEURL = 'uploads/users/profile'
 PUBLICCOVERPAGEURL = 'uploads/videos/cover'
 PUBLICCOVERIMAGEEURL = 'uploads/videos/cover_image'
 PUBLICVIDEOSURL = 'uploads/videos/videos'
-PUBLICSONGURL = 'uploads/songs'
-PUBLICSINGERURL = "uploads/singers"
+PUBLICSONGURL = 'http://localhost:8000/upload/songs'
+PUBLICSINGERURL = "http://localhost:8000/upload/singers"
 PUBLICEFFECTSURL = "uploads/effects"
-PUBLICSONGBANNERIMAGE = "uploads/song_banner_image"
-PUBLICBANNERIMAGE = "uploads/banner_image"
+PUBLICSONGBANNERIMAGE = "http://localhost:8000/upload/song_banner_image"
+PUBLICBANNERIMAGE = "uploads/banner_image"  
