--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.20",
     "peer": "^0.6.1",
     "peerjs": "^1.4.7",
+    "qrcode": "^1.5.1",
     "sharp-multer": "^0.2.5",
     "socket.io": "^4.5.4",
     "soft-delete-plugin-mongoose": "^1.0.15",
