--- a/.env
+++ b/.env
@@ -9,4 +9,5 @@ PUBLICSONGURL = 'http://localhost:8000/upload/songs'
 PUBLICSINGERURL = "http://localhost:8000/upload/singers"
 PUBLICEFFECTSURL = "uploads/effects"
 PUBLICSONGBANNERIMAGE = "http://localhost:8000/upload/song_banner_image"
-PUBLICBANNERIMAGE = "uploads/banner_image"  
+PUBLICBANNERIMAGE = "http://localhost:8000/upload/banner_image"  
+PUBLICCHATPROFILEIMAGE = "http://localhost:8000/upload/chats/profile"  
