--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB = "mongodb+srv://SwipeUp:Fe%40rdogmusic100%2395@cluster0.mzn4zxj.mongodb.net/swipeup?retryWrites=true&w=majority"
 USER_SECRET = "fsjdfienfasoiewthweiafjlafx"
 API_KEY = "f0e17ead-4a52-11ed-9c12-0200cd936042"
-PUBLICPROFILEURL = 'uploads/users/profile' 
+PUBLICPROFILEURL = 'http://localhost:8000/upload/users/profile' 
 PUBLICCOVERPAGEURL = 'uploads/videos/cover'
 PUBLICCOVERIMAGEEURL = 'uploads/videos/cover_image'
 PUBLICVIDEOSURL = 'uploads/videos/videos'
