--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
+    "nodemailer-express-handlebars": "^6.0.0",
     "nodemon": "^2.0.20",
     "peer": "^0.6.1",
     "peerjs": "^1.4.7",
