--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ PUBLICEFFECTSURL = "uploads/effects"
 PUBLICSONGBANNERIMAGE = "http://localhost:8000/upload/song_banner_image"
 PUBLICBANNERIMAGE = "http://localhost:8000/upload/banner_image"  
 PUBLICCHATPROFILEIMAGE = "http://localhost:8000/upload/chats/profile"  
+PUBLICSTORYURL = "http://localhost:8000/upload/user/story"  
