--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB = "mongodb+srv://SwipeUp:Fe%40rdogmusic100%2395@cluster0.mzn4zxj.mongodb.net/swipeup?retryWrites=true&w=majority"
 USER_SECRET = "fsjdfienfasoiewthweiafjlafx"
+ADMIN_SECRET = "b8fa8c132862c9fdd0403e19b8x"
 API_KEY = "f0e17ead-4a52-11ed-9c12-0200cd936042"
 PUBLICPROFILEURL = 'http://localhost:8000/upload/users/profile' 
 PUBLICCOVERPAGEURL = 'uploads/videos/cover'
