--- a/.env
+++ b/.env
@@ -3,9 +3,10 @@ USER_SECRET = "fsjdfienfasoiewthweiafjlafx"
 ADMIN_SECRET = "b8fa8c132862c9fdd0403e19b8x"
 API_KEY = "f0e17ead-4a52-11ed-9c12-0200cd936042"
 PUBLICPROFILEURL = 'http://localhost:8000/upload/users/profile' 
-PUBLICCOVERPAGEURL = 'uploads/videos/cover'
+PUBLICCOVERPAGEURL = 'http://localhost:8000/upload/videos/cover_image'
 PUBLICCOVERIMAGEEURL = 'uploads/videos/cover_image'
-PUBLICVIDEOSURL = 'uploads/videos/videos'
+PUBLICVIDEOSURL = 'http://localhost:8000/upload/videos/videos'
+PUBLICREPORTURL = 'http://localhost:8000/upload/reports'
 PUBLICSONGURL = 'http://localhost:8000/upload/songs'
 PUBLICSINGERURL = "http://localhost:8000/upload/singers"
 PUBLICEFFECTSURL = "uploads/effects"
